Fixed mobile styling issue
Absolute positioning was causing words to overlap, fixed this issue so it looks how I'd like it on mobile

--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -8,12 +8,17 @@
     font-family: Arial;
 }
 
-.welcomeBlock > div {
+.welcomeContainer {
+    position: relative;
+    text-align: center;
+}
+
+.welcomeBlock {
     position: absolute;
-    top: 45%;
+    top: 35%;
     left: 0;
     right: 0;
-    font-size: 65px;
+    font-size: 30px;
     margin: 0 auto;
     width: 100%;
     color: #945c74;
@@ -24,27 +29,13 @@
 
 .welcomeLine {
     position: absolute;
-    top: 54%;
+    top: 53%;
     left: 0;
     right: 0;
     width: 400px;
     color: #945c74;
-    height: 1px;
+    height: 10px;
     margin: 0 auto;
-}
-
-.welcomeBlock > p {
-    position: absolute;
-    top: 55%;
-    left: 0;
-    right: 0;
-    font-size: 30px;
-    margin: 0 auto;
-    width: 100%;
-    color: #945c74;
-    text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 #imageSource {
